# Docker_Project

.github/workflows/: ci.yml
Docker Project/: compose.yaml  dagster.yaml  requirements.txt
Docker Project/.dagster/history/: runs.db
Docker Project/.dagster/history/runs/: 6872b641-6b26-4be5-a539-f18e63832e67.db  9e8334b9-8038-4024-8a58-2b6b27e4fe8f.db  fc2fc211-c4c9-4908-bd74-2a670713e2d3.db  index.db
Docker Project/.dagster/schedules/: schedules.db
Docker Project/.dagster/storage/14e251d2-62b3-470c-b141-0f518b45ba02/compute_logs/: uokrtkdn.err
Docker Project/dagster_home/history/runs/: index.db
Docker Project/dagster_home/schedules/: schedules.db
Docker Project/my_source/: assets.py  job.py  postgres_pipeline.py
Docker Project/my_source/my-source/: pyproject.toml  setup.cfg
Docker_Project/: Dockerfile  workspace.yaml
Docker_Project/.dagster/.telemetry/: id.yaml
Docker_Project/.dagster/history/runs/: 14e251d2-62b3-470c-b141-0f518b45ba02.db  381c75c1-f0c2-4294-8bbb-19f893d3a9a2.db  842590c5-2523-489b-ac76-648489b54ef5.db  849880aa-7014-4e08-8738-76f993c71de0.db  958c485d-a09e-4d40-8c17-5b3a065b6f22.db  9e073592-dc46-445c-9ec4-64604c5967a0.db  aa827176-9338-49d9-bd1f-49f04b1ee360.db  c65e7b45-1c57-46aa-8350-6290738a3186.db
Docker_Project/dagster_home/: dagster.yaml
Docker_Project/dagster_home/.telemetry/: id.yaml
Docker_Project/dagster_home/history/: runs.db
Docker_Project/my_source/: assets.py  definitions.py
Docker_Project/my_source/my-source/: README.md  setup.py
(+18 files in other folders)
